[gd_scene load_steps=10 format=3 uid="uid://cmildx3ow4pak"]

[ext_resource type="Script" path="res://scripts/Enemies/enemy_movement.gd" id="1_eoh17"]
[ext_resource type="Texture2D" uid="uid://cgn2cghtlkig" path="res://assets/Mouse.png" id="2_x6e61"]
[ext_resource type="PackedScene" uid="uid://buwbwxbvrjd0j" path="res://scenes/misc/kill_zone.tscn" id="3_5q1jw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yhfrj"]
atlas = ExtResource("2_x6e61")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwhyy"]
atlas = ExtResource("2_x6e61")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8vx1"]
atlas = ExtResource("2_x6e61")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ht7ax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhfrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwhyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8vx1")
}],
"loop": true,
"name": &"default",
"speed": 4.5
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8bnp"]
size = Vector2(13.0421, 4.57706)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8hfmy"]
size = Vector2(12, 5)

[node name="Mouse_Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_eoh17")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ht7ax")
autoplay = "default"
frame_progress = 0.320836

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.849955, 4.44057)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_i8bnp")

[node name="Kill_Zone" parent="." instance=ExtResource("3_5q1jw")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kill_Zone"]
position = Vector2(1, 4.5)
shape = SubResource("RectangleShape2D_8hfmy")

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(9, 0)

[node name="RayCastDownRight" type="RayCast2D" parent="."]
target_position = Vector2(9, 9)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-9, 0)

[node name="RayCastDownLeft" type="RayCast2D" parent="."]
target_position = Vector2(-9, 9)
